// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form Hooks Test useObject: generated subschemas with prefix 1`] = `
Object {
  "fields": Array [
    Object {
      "mapTo": "myStringValue.checked",
      "objectDefinition": Object {
        "type": "boolean",
      },
      "prefix": "prefix",
    },
    Object {
      "mapTo": "myStringValue.id",
      "objectDefinition": Object {
        "type": "integer",
      },
      "prefix": "prefix",
    },
    Object {
      "mapTo": "myStringValue.name",
      "objectDefinition": Object {
        "type": "string",
      },
      "prefix": "prefix",
    },
  ],
}
`;

exports[`Form Hooks Test useObject: generated subschemas without mapTo and prefix 1`] = `
Object {
  "fields": Array [
    Object {
      "mapTo": "myObject.checked",
      "objectDefinition": Object {
        "type": "boolean",
      },
      "prefix": undefined,
    },
    Object {
      "mapTo": "myObject.id",
      "objectDefinition": Object {
        "type": "integer",
      },
      "prefix": undefined,
    },
    Object {
      "mapTo": "myObject.name",
      "objectDefinition": Object {
        "type": "string",
      },
      "prefix": undefined,
    },
  ],
}
`;
